syntax = "proto3";
package kv_store;
option go_package = "/kv_store";


message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes value = 1;
}

message PutRequest {
  string key = 1;
  bytes value = 2;
}

message Empty {}


service KvStore {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Put(PutRequest) returns (Empty);
}